--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@supabase/supabase-js": "2.39.2",
     "@tanstack/react-query": "5.8.4",
     "@types/node": "22.1.0",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/uuid": "9.0.7",
+    "@yudiel/react-qr-scanner": "^2.3.0",
     "autoprefixer": "10.4.20",
     "axios": "1.6.2",
     "canvas-confetti": "^1.9.2",
@@ -31,6 +33,8 @@
     "moment-timezone": "^0.5.48",
     "next": "14.2.5",
     "postcss": "8.4.41",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.48.2",
